crates/ruff/src/rules/ruff/snapshots/ruff__rules__ruff__tests__ruf100_2.snap
---
source: crates/ruff/src/rules/ruff/mod.rs
---
RUF100_2.py:1:19: RUF100 [*] Unused `noqa` directive (unused: `F401`)
  |
1 | import itertools  # noqa: F401
  |                   ^^^^^^^^^^^^ RUF100
  |
  = help: Remove unused `noqa` directive

ℹ Fix
1   |-import itertools  # noqa: F401
  1 |+import itertools


