crates/ruff/src/rules/ruff/snapshots/ruff__rules__ruff__tests__ruf100_3.snap
---
source: crates/ruff/src/rules/ruff/mod.rs
---
RUF100_3.py:1:1: RUF100 [*] Unused blanket `noqa` directive
  |
1 | # noqa
  | ^^^^^^ RUF100
2 | # noqa # comment
3 | print()  # noqa
  |
  = help: Remove unused `noqa` directive

ℹ Fix
1   |-# noqa
2 1 | # noqa # comment
3 2 | print()  # noqa
4 3 | print()  # noqa # comment

RUF100_3.py:2:1: RUF100 [*] Unused blanket `noqa` directive
  |
1 | # noqa
2 | # noqa # comment
  | ^^^^^^ RUF100
3 | print()  # noqa
4 | print()  # noqa # comment
  |
  = help: Remove unused `noqa` directive

ℹ Fix
1 1 | # noqa
2   |-# noqa # comment
  2 |+# comment
3 3 | print()  # noqa
4 4 | print()  # noqa # comment
5 5 | print()  # noqa  # comment

RUF100_3.py:3:10: RUF100 [*] Unused blanket `noqa` directive
  |
1 | # noqa
2 | # noqa # comment
3 | print()  # noqa
  |          ^^^^^^ RUF100
4 | print()  # noqa # comment
5 | print()  # noqa  # comment
  |
  = help: Remove unused `noqa` directive

ℹ Fix
1 1 | # noqa
2 2 | # noqa # comment
3   |-print()  # noqa
  3 |+print()
4 4 | print()  # noqa # comment
5 5 | print()  # noqa  # comment
6 6 | print()  # noqa comment

RUF100_3.py:4:10: RUF100 [*] Unused blanket `noqa` directive
  |
2 | # noqa # comment
3 | print()  # noqa
4 | print()  # noqa # comment
  |          ^^^^^^ RUF100
5 | print()  # noqa  # comment
6 | print()  # noqa comment
  |
  = help: Remove unused `noqa` directive

ℹ Fix
1 1 | # noqa
2 2 | # noqa # comment
3 3 | print()  # noqa
4   |-print()  # noqa # comment
  4 |+print()  # comment
5 5 | print()  # noqa  # comment
6 6 | print()  # noqa comment
7 7 | print()  # noqa  comment

RUF100_3.py:5:10: RUF100 [*] Unused blanket `noqa` directive
  |
3 | print()  # noqa
4 | print()  # noqa # comment
5 | print()  # noqa  # comment
  |          ^^^^^^ RUF100
6 | print()  # noqa comment
7 | print()  # noqa  comment
  |
  = help: Remove unused `noqa` directive

ℹ Fix
2 2 | # noqa # comment
3 3 | print()  # noqa
4 4 | print()  # noqa # comment
5   |-print()  # noqa  # comment
  5 |+print()  # comment
6 6 | print()  # noqa comment
7 7 | print()  # noqa  comment
8 8 | print(a)  # noqa

RUF100_3.py:6:10: RUF100 [*] Unused blanket `noqa` directive
  |
4 | print()  # noqa # comment
5 | print()  # noqa  # comment
6 | print()  # noqa comment
  |          ^^^^^^ RUF100
7 | print()  # noqa  comment
8 | print(a)  # noqa
  |
  = help: Remove unused `noqa` directive

ℹ Fix
3 3 | print()  # noqa
4 4 | print()  # noqa # comment
5 5 | print()  # noqa  # comment
6   |-print()  # noqa comment
  6 |+print()  # comment
7 7 | print()  # noqa  comment
8 8 | print(a)  # noqa
9 9 | print(a)  # noqa # comment

RUF100_3.py:7:10: RUF100 [*] Unused blanket `noqa` directive
  |
5 | print()  # noqa  # comment
6 | print()  # noqa comment
7 | print()  # noqa  comment
  |          ^^^^^^ RUF100
8 | print(a)  # noqa
9 | print(a)  # noqa # comment
  |
  = help: Remove unused `noqa` directive

ℹ Fix
4 4 | print()  # noqa # comment
5 5 | print()  # noqa  # comment
6 6 | print()  # noqa comment
7   |-print()  # noqa  comment
  7 |+print()  # comment
8 8 | print(a)  # noqa
9 9 | print(a)  # noqa # comment
10 10 | print(a)  # noqa  # comment

RUF100_3.py:14:1: RUF100 [*] Unused `noqa` directive (unused: `E501`, `F821`)
   |
12 | print(a)  # noqa  comment
13 | 
14 | # noqa: E501, F821
   | ^^^^^^^^^^^^^^^^^^ RUF100
15 | # noqa: E501, F821 # comment
16 | print()  # noqa: E501, F821
   |
   = help: Remove unused `noqa` directive

ℹ Fix
11 11 | print(a)  # noqa comment
12 12 | print(a)  # noqa  comment
13 13 | 
14    |-# noqa: E501, F821
15 14 | # noqa: E501, F821 # comment
16 15 | print()  # noqa: E501, F821
17 16 | print()  # noqa: E501, F821 # comment

RUF100_3.py:15:1: RUF100 [*] Unused `noqa` directive (unused: `E501`, `F821`)
   |
14 | # noqa: E501, F821
15 | # noqa: E501, F821 # comment
   | ^^^^^^^^^^^^^^^^^^ RUF100
16 | print()  # noqa: E501, F821
17 | print()  # noqa: E501, F821 # comment
   |
   = help: Remove unused `noqa` directive

ℹ Fix
12 12 | print(a)  # noqa  comment
13 13 | 
14 14 | # noqa: E501, F821
15    |-# noqa: E501, F821 # comment
   15 |+# comment
16 16 | print()  # noqa: E501, F821
17 17 | print()  # noqa: E501, F821 # comment
18 18 | print()  # noqa: E501, F821  # comment

RUF100_3.py:16:10: RUF100 [*] Unused `noqa` directive (unused: `E501`, `F821`)
   |
14 | # noqa: E501, F821
15 | # noqa: E501, F821 # comment
16 | print()  # noqa: E501, F821
   |          ^^^^^^^^^^^^^^^^^^ RUF100
17 | print()  # noqa: E501, F821 # comment
18 | print()  # noqa: E501, F821  # comment
   |
   = help: Remove unused `noqa` directive

ℹ Fix
13 13 | 
14 14 | # noqa: E501, F821
15 15 | # noqa: E501, F821 # comment
16    |-print()  # noqa: E501, F821
   16 |+print()
17 17 | print()  # noqa: E501, F821 # comment
18 18 | print()  # noqa: E501, F821  # comment
19 19 | print()  # noqa: E501, F821 comment

RUF100_3.py:17:10: RUF100 [*] Unused `noqa` directive (unused: `E501`, `F821`)
   |
15 | # noqa: E501, F821 # comment
16 | print()  # noqa: E501, F821
17 | print()  # noqa: E501, F821 # comment
   |          ^^^^^^^^^^^^^^^^^^ RUF100
18 | print()  # noqa: E501, F821  # comment
19 | print()  # noqa: E501, F821 comment
   |
   = help: Remove unused `noqa` directive

ℹ Fix
14 14 | # noqa: E501, F821
15 15 | # noqa: E501, F821 # comment
16 16 | print()  # noqa: E501, F821
17    |-print()  # noqa: E501, F821 # comment
   17 |+print()  # comment
18 18 | print()  # noqa: E501, F821  # comment
19 19 | print()  # noqa: E501, F821 comment
20 20 | print()  # noqa: E501, F821  comment

RUF100_3.py:18:10: RUF100 [*] Unused `noqa` directive (unused: `E501`, `F821`)
   |
16 | print()  # noqa: E501, F821
17 | print()  # noqa: E501, F821 # comment
18 | print()  # noqa: E501, F821  # comment
   |          ^^^^^^^^^^^^^^^^^^ RUF100
19 | print()  # noqa: E501, F821 comment
20 | print()  # noqa: E501, F821  comment
   |
   = help: Remove unused `noqa` directive

ℹ Fix
15 15 | # noqa: E501, F821 # comment
16 16 | print()  # noqa: E501, F821
17 17 | print()  # noqa: E501, F821 # comment
18    |-print()  # noqa: E501, F821  # comment
   18 |+print()  # comment
19 19 | print()  # noqa: E501, F821 comment
20 20 | print()  # noqa: E501, F821  comment
21 21 | print(a)  # noqa: E501, F821

RUF100_3.py:19:10: RUF100 [*] Unused `noqa` directive (unused: `E501`, `F821`)
   |
17 | print()  # noqa: E501, F821 # comment
18 | print()  # noqa: E501, F821  # comment
19 | print()  # noqa: E501, F821 comment
   |          ^^^^^^^^^^^^^^^^^^ RUF100
20 | print()  # noqa: E501, F821  comment
21 | print(a)  # noqa: E501, F821
   |
   = help: Remove unused `noqa` directive

ℹ Fix
16 16 | print()  # noqa: E501, F821
17 17 | print()  # noqa: E501, F821 # comment
18 18 | print()  # noqa: E501, F821  # comment
19    |-print()  # noqa: E501, F821 comment
   19 |+print()  # comment
20 20 | print()  # noqa: E501, F821  comment
21 21 | print(a)  # noqa: E501, F821
22 22 | print(a)  # noqa: E501, F821 # comment

RUF100_3.py:20:10: RUF100 [*] Unused `noqa` directive (unused: `E501`, `F821`)
   |
18 | print()  # noqa: E501, F821  # comment
19 | print()  # noqa: E501, F821 comment
20 | print()  # noqa: E501, F821  comment
   |          ^^^^^^^^^^^^^^^^^^ RUF100
21 | print(a)  # noqa: E501, F821
22 | print(a)  # noqa: E501, F821 # comment
   |
   = help: Remove unused `noqa` directive

ℹ Fix
17 17 | print()  # noqa: E501, F821 # comment
18 18 | print()  # noqa: E501, F821  # comment
19 19 | print()  # noqa: E501, F821 comment
20    |-print()  # noqa: E501, F821  comment
   20 |+print()  # comment
21 21 | print(a)  # noqa: E501, F821
22 22 | print(a)  # noqa: E501, F821 # comment
23 23 | print(a)  # noqa: E501, F821  # comment

RUF100_3.py:21:11: RUF100 [*] Unused `noqa` directive (unused: `E501`)
   |
19 | print()  # noqa: E501, F821 comment
20 | print()  # noqa: E501, F821  comment
21 | print(a)  # noqa: E501, F821
   |           ^^^^^^^^^^^^^^^^^^ RUF100
22 | print(a)  # noqa: E501, F821 # comment
23 | print(a)  # noqa: E501, F821  # comment
   |
   = help: Remove unused `noqa` directive

ℹ Fix
18 18 | print()  # noqa: E501, F821  # comment
19 19 | print()  # noqa: E501, F821 comment
20 20 | print()  # noqa: E501, F821  comment
21    |-print(a)  # noqa: E501, F821
   21 |+print(a)  # noqa: F821
22 22 | print(a)  # noqa: E501, F821 # comment
23 23 | print(a)  # noqa: E501, F821  # comment
24 24 | print(a)  # noqa: E501, F821 comment

RUF100_3.py:22:11: RUF100 [*] Unused `noqa` directive (unused: `E501`)
   |
20 | print()  # noqa: E501, F821  comment
21 | print(a)  # noqa: E501, F821
22 | print(a)  # noqa: E501, F821 # comment
   |           ^^^^^^^^^^^^^^^^^^ RUF100
23 | print(a)  # noqa: E501, F821  # comment
24 | print(a)  # noqa: E501, F821 comment
   |
   = help: Remove unused `noqa` directive

ℹ Fix
19 19 | print()  # noqa: E501, F821 comment
20 20 | print()  # noqa: E501, F821  comment
21 21 | print(a)  # noqa: E501, F821
22    |-print(a)  # noqa: E501, F821 # comment
   22 |+print(a)  # noqa: F821 # comment
23 23 | print(a)  # noqa: E501, F821  # comment
24 24 | print(a)  # noqa: E501, F821 comment
25 25 | print(a)  # noqa: E501, F821  comment

RUF100_3.py:23:11: RUF100 [*] Unused `noqa` directive (unused: `E501`)
   |
21 | print(a)  # noqa: E501, F821
22 | print(a)  # noqa: E501, F821 # comment
23 | print(a)  # noqa: E501, F821  # comment
   |           ^^^^^^^^^^^^^^^^^^ RUF100
24 | print(a)  # noqa: E501, F821 comment
25 | print(a)  # noqa: E501, F821  comment
   |
   = help: Remove unused `noqa` directive

ℹ Fix
20 20 | print()  # noqa: E501, F821  comment
21 21 | print(a)  # noqa: E501, F821
22 22 | print(a)  # noqa: E501, F821 # comment
23    |-print(a)  # noqa: E501, F821  # comment
   23 |+print(a)  # noqa: F821  # comment
24 24 | print(a)  # noqa: E501, F821 comment
25 25 | print(a)  # noqa: E501, F821  comment

RUF100_3.py:24:11: RUF100 [*] Unused `noqa` directive (unused: `E501`)
   |
22 | print(a)  # noqa: E501, F821 # comment
23 | print(a)  # noqa: E501, F821  # comment
24 | print(a)  # noqa: E501, F821 comment
   |           ^^^^^^^^^^^^^^^^^^ RUF100
25 | print(a)  # noqa: E501, F821  comment
   |
   = help: Remove unused `noqa` directive

ℹ Fix
21 21 | print(a)  # noqa: E501, F821
22 22 | print(a)  # noqa: E501, F821 # comment
23 23 | print(a)  # noqa: E501, F821  # comment
24    |-print(a)  # noqa: E501, F821 comment
   24 |+print(a)  # noqa: F821 comment
25 25 | print(a)  # noqa: E501, F821  comment

RUF100_3.py:25:11: RUF100 [*] Unused `noqa` directive (unused: `E501`)
   |
23 | print(a)  # noqa: E501, F821  # comment
24 | print(a)  # noqa: E501, F821 comment
25 | print(a)  # noqa: E501, F821  comment
   |           ^^^^^^^^^^^^^^^^^^ RUF100
   |
   = help: Remove unused `noqa` directive

ℹ Fix
22 22 | print(a)  # noqa: E501, F821 # comment
23 23 | print(a)  # noqa: E501, F821  # comment
24 24 | print(a)  # noqa: E501, F821 comment
25    |-print(a)  # noqa: E501, F821  comment
   25 |+print(a)  # noqa: F821  comment


