crates/ruff/src/rules/ruff/snapshots/ruff__rules__ruff__tests__ruf100_5.snap
---
source: crates/ruff/src/rules/ruff/mod.rs
---
RUF100_5.py:5:21: RUF100 [*] Unused `noqa` directive (unused: `ERA001`)
  |
4 | dictionary = {
5 |     # "key1": 123,  # noqa: ERA001
  |                     ^^^^^^^^^^^^^^ RUF100
6 |     # "key2": 456,  # noqa
7 |     # "key3": 789,
  |
  = help: Remove unused `noqa` directive

ℹ Suggested fix
2 2 | #import os  # noqa: ERA001
3 3 | 
4 4 | dictionary = {
5   |-    # "key1": 123,  # noqa: ERA001
  5 |+    # "key1": 123,
6 6 |     # "key2": 456,  # noqa
7 7 |     # "key3": 789,
8 8 | }

RUF100_5.py:6:21: RUF100 [*] Unused blanket `noqa` directive
  |
4 | dictionary = {
5 |     # "key1": 123,  # noqa: ERA001
6 |     # "key2": 456,  # noqa
  |                     ^^^^^^ RUF100
7 |     # "key3": 789,
8 | }
  |
  = help: Remove unused `noqa` directive

ℹ Suggested fix
3 3 | 
4 4 | dictionary = {
5 5 |     # "key1": 123,  # noqa: ERA001
6   |-    # "key2": 456,  # noqa
  6 |+    # "key2": 456,
7 7 |     # "key3": 789,
8 8 | }
9 9 | 

RUF100_5.py:7:5: ERA001 [*] Found commented-out code
  |
5 |     # "key1": 123,  # noqa: ERA001
6 |     # "key2": 456,  # noqa
7 |     # "key3": 789,
  |     ^^^^^^^^^^^^^^ ERA001
8 | }
  |
  = help: Remove commented-out code

ℹ Possible fix
4 4 | dictionary = {
5 5 |     # "key1": 123,  # noqa: ERA001
6 6 |     # "key2": 456,  # noqa
7   |-    # "key3": 789,
8 7 | }
9 8 | 
10 9 | 

RUF100_5.py:11:1: ERA001 [*] Found commented-out code
   |
11 | #import os  # noqa: E501
   | ^^^^^^^^^^^^^^^^^^^^^^^^ ERA001
   |
   = help: Remove commented-out code

ℹ Possible fix
8  8  | }
9  9  | 
10 10 | 
11    |-#import os  # noqa: E501

RUF100_5.py:11:13: RUF100 [*] Unused `noqa` directive (unused: `E501`)
   |
11 | #import os  # noqa: E501
   |             ^^^^^^^^^^^^ RUF100
   |
   = help: Remove unused `noqa` directive

ℹ Suggested fix
8  8  | }
9  9  | 
10 10 | 
11    |-#import os  # noqa: E501
   11 |+#import os


