crates/ruff/src/rules/ruff/snapshots/ruff__rules__ruff__tests__ruff_noqa_codes.snap
---
source: crates/ruff/src/rules/ruff/mod.rs
---
ruff_noqa_codes.py:8:5: F841 [*] Local variable `x` is assigned to but never used
  |
7 | def f():
8 |     x = 1
  |     ^ F841
  |
  = help: Remove assignment to unused variable `x`

ℹ Suggested fix
5 5 | 
6 6 | 
7 7 | def f():
8   |-    x = 1
  8 |+    pass


