crates/ruff/src/rules/ruff/snapshots/ruff__rules__ruff__tests__ruff_noqa_invalid.snap
---
source: crates/ruff/src/rules/ruff/mod.rs
---
ruff_noqa_invalid.py:1:8: F401 [*] `os` imported but unused
  |
1 | import os  # ruff: noqa: F401
  |        ^^ F401
  |
  = help: Remove unused import: `os`

ℹ Fix
1   |-import os  # ruff: noqa: F401
2 1 | 
3 2 | 
4 3 | def f():

ruff_noqa_invalid.py:5:5: F841 [*] Local variable `x` is assigned to but never used
  |
4 | def f():
5 |     x = 1
  |     ^ F841
  |
  = help: Remove assignment to unused variable `x`

ℹ Suggested fix
2 2 | 
3 3 | 
4 4 | def f():
5   |-    x = 1
  5 |+    pass


