crates/ruff/src/rules/ruff/snapshots/ruff__rules__ruff__tests__ruff_targeted_noqa.snap
---
source: crates/ruff/src/rules/ruff/mod.rs
expression: diagnostics
---
- kind:
    UnusedVariable:
      name: x
  location:
    row: 8
    column: 4
  end_location:
    row: 8
    column: 5
  fix:
    content:
      - pass
    location:
      row: 8
      column: 4
    end_location:
      row: 8
      column: 9
  parent: ~

